@@ -1,0 +1,93 @@
+<?xml version="1.0" encoding="ISO-8859-1" standalone="no"?>
+<ELEMENTS>
+  <ELEMENT>
+    <items>
+      <item>1</item>
+      <item>2</item>
+      <item>3</item>
+      <item>4</item>
+      <item>5</item>
+      <!-- Some dupls. -->
+      <item>dupl1</item>
+      <item>dupl2</item>
+      <item>dupl3</item>
+      <item>dupl4</item>
+      <item>dupl5</item>
+      <item>dupl6</item>
+      <item>dupl7</item>
+      <item>dupl8</item>
+      <item>dupl9</item>
+      <item>dupl10</item>
+      <item>dupl11</item>
+
+      <item>6</item>
+      <item>7</item>
+      <item>8</item>
+      <item>9</item>
+      <item>10</item>
+      <item>11</item>
+      <items>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <!-- Some dupls. -->
+        <item>dupl1</item>
+        <item>dupl2</item>
+        <item>dupl3</item>
+        <item>dupl4</item>
+        <item>dupl5</item>
+        <item>dupl6</item>
+        <item>dupl7</item>
+        <item>dupl8</item>
+        <item>dupl9</item>
+        <item>dupl10</item>
+        <item>dupl11</item>
+
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+      </items>
+      <items>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+        <item>25</item>
+        <item>26</item>
+        <item>27</item>
+        <item>28</item>
+        <item>29</item>
+        <item>30</item>
+        <item>31</item>
+        <item>32</item>
+        <item>33</item>
+        <item>34</item>
+        <item>35</item>
+        <item>36</item>
+        <item>37</item>
+        <item>38</item>
+        <item>39</item>
+        <item>40</item>
+        <item>41</item>
+        <!-- Some dupls. -->
+        <item>dupl1</item>
+        <item>dupl2</item>
+        <item>dupl3</item>
+        <item>dupl4</item>
+        <item>dupl5</item>
+        <item>dupl6</item>
+        <item>dupl7</item>
+        <item>dupl8</item>
+        <item>dupl9</item>
+        <item>dupl10</item>
+        <item>dupl11</item>
+      </items>
+    </items>
+    <!-- Keyrefs. -->
+    <ref>41</ref>
+  </ELEMENT>
+</ELEMENTS>
+
