@@ -1,0 +1,35 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+
+  <xsd:element name="items">
+    <xsd:complexType>
+      <xsd:sequence>
+        <xsd:element name="item" maxOccurs="unbounded" type="xsd:string"/>
+        <xsd:element ref="items" minOccurs="0" maxOccurs="2"/>
+      </xsd:sequence>
+    </xsd:complexType>
+    <xsd:unique name="ItemUnique">
+      <xsd:selector xpath="item"/>
+      <xsd:field xpath="."/>
+    </xsd:unique>
+  </xsd:element>
+
+  <xsd:element name="ELEMENTS">
+    <xsd:complexType>
+      <xsd:sequence>
+        <xsd:element name="ELEMENT">
+          <xsd:complexType>
+            <xsd:sequence>
+              <xsd:element ref="items"/>
+              <xsd:element name="ref" type="xsd:string" maxOccurs="unbounded"/>
+            </xsd:sequence>
+          </xsd:complexType>
+          <xsd:keyref name="ItemRef" refer="ItemUnique">
+            <xsd:selector xpath="ref"/>
+            <xsd:field xpath="."/>
+          </xsd:keyref>
+        </xsd:element>
+      </xsd:sequence>
+    </xsd:complexType>
+  </xsd:element>
+</xsd:schema>
