@@ -1,0 +1,24 @@
+<?xml version="1.0"?>
+<foo
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:noNamespaceSchemaLocation="decimal-1.xsd">
+    <!-- The good ones. -->
+    <val> 0. </val>
+    <val> .0 </val>
+    <val> .10 </val>
+    <val> 01. </val>
+    <val> 000 </val>
+    <val>123456789012345678</val>
+    <val>-123456789012345678</val>
+    <val>0.123456789012345678</val>
+    <val>-0.123456789012345678</val>
+    <!-- The bad ones. -->
+    <val>.</val>
+    <val>-</val>
+    <val>+</val>
+    <val>*</val>
+    <val>- 1</val>
+    <val>+ 1</val>
+    <val>+ 0</val>
+    <val>- 0</val>
+</foo>
