@@ -1,0 +1,17 @@
+<?xml version="1.0"?>
+<foo
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:noNamespaceSchemaLocation="decimal-3.xsd">
+    <!-- The good ones. -->
+    <val>0.12</val>
+    <val>0.0</val>
+    <val>0.02</val>
+    <val>12</val>
+    <val>1.2</val>
+    <!-- The bad ones. -->
+    <val>0.123</val>
+    <val>0.023</val>
+    <val>123</val>
+    <val>12.3</val>
+</foo>
+
